--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,4 +33,5 @@ hyper = { version = "0.14.26", features = ["server", "stream", "http1", "http2"]
 rayon = "1.7.0"
 futures-util = "0.3.28"
 async-channel = "1.8.0"
+rand = "0.8.5"
 
